hphp/hack/test/typecheck/abstract_final_nonstatic_method.php.exp
File "abstract_final_nonstatic_method.php", line 3, characters 19-22:
Abstract final classes cannot have nonstatic methods or constructors. (NastCheck[3074])
