hphp/hack/test/typecheck/abstract_final_nonstatic_method.php
<?hh // partial
abstract final class A {
  public function test() : void {}
}
